--- a/render/views/home.html
+++ b/render/views/home.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
   <div class="row margin-lg">
-    <h3 class="m0">Twitter miner</h3>
+    <h3 class="m0">twurlio</h3>
   </div>
 </div>
 <div ng-show="$ctrl.loggedIn === false" class="container text-center">
@@ -18,7 +18,7 @@
 <div ng-show="$ctrl.loggedIn === true" class="container text-center">
   <div class="row">
     <div class="col-lg-12">
-      <p class="m0">{{$ctrl.username}}</p>
+      <p class="m0">Logged in as: {{$ctrl.username}}</p>
     </div>
   </div>
   <div class="row margin-lg">
@@ -32,6 +32,14 @@
           </button>
         </span>
       </div>
+    </div>
+  </div>
+  <div class="row margin-lg">
+    <div class="col-lg-12">
+      <button ng-click="$ctrl.newFileImport()" ng-disabled="$ctrl.searchEnabled === false" class="btn btn-labeled btn-primary">
+        <span class="btn-label"><i class="fa fa-file"></i>
+        </span>Browse
+      </button>
     </div>
   </div>
 </div>
@@ -49,6 +57,7 @@
       <table class="table table-striped table-hover" ts-wrapper>
         <thead>
           <tr>
+            <th>Requested</th>
             <th>Received</th>
             <th>Discarded</th>
             <th>Total</th>
@@ -56,6 +65,7 @@
         </thead>
         <tbody>
           <tr>
+            <td>{{$ctrl.followersIDsRequested}}</td>
             <td>{{$ctrl.followersIDsReceived}}</td>
             <td>{{$ctrl.followersIDsDiscarded}}</td>
             <td>{{$ctrl.targetUser.followers_count}}</td>
@@ -68,6 +78,7 @@
       <table class="table table-striped table-hover" ts-wrapper>
         <thead>
           <tr>
+            <th>Requested</th>
             <th>Received</th>
             <th>Discarded</th>
             <th>Total</th>
@@ -75,6 +86,7 @@
         </thead>
         <tbody>
           <tr>
+            <td>{{$ctrl.followersDetailsRequested}}</td>
             <td>{{$ctrl.followersDetailsReceived}}</td>
             <td>{{$ctrl.followersDetailsDiscarded}}</td>
             <td>{{$ctrl.targetUser.followers_count}}</td>
@@ -103,11 +115,11 @@
 
 <div ng-show="$ctrl.followers.length > 0" class="container">
   <div class="row margin-lg text-center">
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
       <p><strong>Page</strong></p>
       <ul class="pagination-sm margin-none" direction-links="true" uib-pagination max-size="4" total-items="$ctrl.followers.length" items-per-page="$ctrl.pageSize" ng-model="$ctrl.currentPage" ng-change="$ctrl.pageChanged()"></ul>
     </div>
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
       <p><strong>Items per page</strong></p>
       <select class="form-control" ng-model="$ctrl.pageSize" ng-options="item for item in $ctrl.pagesSelectOptions"></select>
     </div>
